// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mapEntriesDeep > arrays > mapEntriesDeep({ numbers: [ 1, 2, 3 ], strings: [ 'a', 'b' ] }, () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  numbers: [ 1, 2, 3 ],
  strings: [ 'a', 'b' ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > arrays > mapEntriesDeep({ users: [ { $id: 1, $name: 'alice' }, { $id: 2, $name: 'bob' } ] }, (key, value) => key.startsWith("$") ? { key: key.slice(1), value } : undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  users: [
    {
      id: 1,
      name: 'alice'
    },
    {
      id: 2,
      name: 'bob'
    }
  ]
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > combined transformations > mapEntriesDeep({ $name: 'alice', age: 25, $email: 'alice@example.com' }, (key, value) => { if (key.startsWith("$")) { return { key: key.slice(1), value: ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  name: 'ALICE',
  age: 25,
  email: 'ALICE@EXAMPLE.COM'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > empty objects > mapEntriesDeep({}, (key, value) => ({ key: key.toUpperCase(), value })) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > key transformations > mapEntriesDeep({ $a: { $b: { $c: { $d: 'deep' } } } }, (key, value) => key.startsWith("$") ? { key: key.slice(1), value } : undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  a: {
    b: {
      c: {
        d: 'deep'
      }
    }
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > key transformations > mapEntriesDeep({ $foo: 'a', bar: 'b', $baz: { nested: 'c' } }, (key, value) => key.startsWith("$") ? { key: key.slice(1), value } : undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  foo: 'a',
  bar: 'b',
  baz: {
    nested: 'c'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > key transformations > mapEntriesDeep({ $foo: 'bar', $baz: { $nested: 'value' } }, (key, value) => key.startsWith("$") ? { key: key.slice(1), value } : undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  foo: 'bar',
  baz: {
    nested: 'value'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > mixed structures > mapEntriesDeep({ str: 'hello', arr: [ 1, 'two', { nested: 'obj' } ], obj: { inner: 'value' } }, (key, value) => typeof value === "string" ? { key, value: value.toUpperCase() } ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  str: 'HELLO',
  arr: [
    1,
    'two',
    {
      nested: 'OBJ'
    }
  ],
  obj: {
    inner: 'VALUE'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > non-plain objects (Date, RegExp, etc.) > mapEntriesDeep({ $pattern: /test/i }, (key, value) => key.startsWith("$") ? { key: key.slice(1), value } : undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  pattern: /test/i
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > non-plain objects (Date, RegExp, etc.) > mapEntriesDeep({ nested: { $regex: /[a-z]+/ } }, (key, value) => key.startsWith("$") ? { key: key.slice(1), value } : undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  nested: {
    regex: /[a-z]+/
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > primitives > mapEntriesDeep('hello', () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS STRING
hello
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > primitives > mapEntriesDeep(42, () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS NUMBER
42
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > primitives > mapEntriesDeep(null, () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS NULL
null
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > primitives > mapEntriesDeep(true, () => undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS BOOLEAN
true
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > selective transformations > mapEntriesDeep({ keep: 'me', transform: 'this' }, (key, value) => key === "transform" ? { key, value: "TRANSFORMED" } : undefined) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  keep: 'me',
  transform: 'TRANSFORMED'
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > value transformations > mapEntriesDeep({ name: 'alice', address: { city: 'nyc' } }, (key, value) => typeof value === "string" ? { key, value: value.toUpperCase() } ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  name: 'ALICE',
  address: {
    city: 'NYC'
  }
}
╚══════════════════════════════════════════════════╝"
`;

exports[`mapEntriesDeep > value transformations > mapEntriesDeep({ str: 'hi', num: 42, bool: true, nil: null }, (key, value) => typeof value === "string" ? { key, value: value.toUpperCase() } ...) 1`] = `
"
╔══════════════════════════════════════════════════╗ THEN RETURNS OBJECT
{
  str: 'HI',
  num: 42,
  bool: true,
  nil: null
}
╚══════════════════════════════════════════════════╝"
`;
